# Cargo.toml - Nuclear Performance Configuration
[package]
name = "risk-analytics-api"
version = "1.0.0"
edition = "2021"
authors = ["Team 9 <team9@hackathon.com>"]
description = "Ultra-high performance investment risk analytics API"

[dependencies]
# Core async runtime - latest performance improvements
tokio = { version = "1.37", features = [
  "full",
  "tracing",
  "signal",
  "process",
] }

# Web framework - blazing fast HTTP
axum = { version = "0.7", features = ["json", "query", "macros", "tracing"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = [
  "cors",
  "trace",
  "compression-gzip",
] }

# Database - optimized for massive datasets  
sqlx = { version = "0.7", features = [
  "runtime-tokio-rustls",
  "postgres",
  "chrono",
  "uuid",
  "json",
  "migrate",
] }

# Serialization - zero-copy when possible
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# High-performance mathematics
nalgebra = "0.32"  # Linear algebra with SIMD
statrs = "0.16"    # Statistical functions
rayon = "1.8"      # Data parallelism
num-traits = "0.2" # Numeric trait abstractions

# Caching & concurrent data structures
dashmap = "5.5"                                                               # Lock-free HashMap
moka = { version = "0.12", features = ["future"] }                            # Advanced LRU cache
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Memory optimization
mimalloc = { version = "0.1", default-features = false, optional = true } # Fast allocator
bytes = "1.5"                                            # Zero-copy byte buffers

# Configuration & environment
config = "0.14"  # Configuration management
dotenvy = "0.15" # Environment variables

# Error handling & logging
anyhow = "1.0"                                                              # Error handling
thiserror = "1.0"                                                           # Custom error types
tracing = "0.1"                                                             # Structured logging
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Performance monitoring
metrics = "0.22"                     # Metrics collection
metrics-exporter-prometheus = "0.13" # Prometheus metrics

# Development & testing
uuid = { version = "1.7", features = ["v4", "serde"] }
libc = "0.2"
futures = "0.3"
reqwest = { version = "0.11", features = ["json"] }
toml = "0.8"
bincode = "1.3"

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }
reqwest = { version = "0.11", features = ["json"] }

[profile.release]
# MAXIMUM PERFORMANCE OPTIMIZATIONS
opt-level = 3           # Maximum optimization
lto = "fat"             # Aggressive link-time optimization  
codegen-units = 1       # Single compilation unit for better optimization
panic = "abort"         # Abort on panic (smaller, faster binary)
strip = true            # Strip debug symbols
overflow-checks = false # Disable overflow checks for speed
debug = false           # No debug info in release
rpath = false           # Disable rpath for smaller binary

# Target-specific optimizations
[profile.release.package."*"]
opt-level = 3
overflow-checks = false

# Build optimizations for AWS EC2 (Intel Xeon)
[target.x86_64-unknown-linux-gnu]
rustflags = [
  "-C",
  "target-cpu=native",         # Use all CPU features available
  "-C",
  "target-feature=+avx2,+fma", # Enable SIMD instructions
  "-C",
  "link-arg=-fuse-ld=lld",     # Use faster linker
]

[features]
default = ["mimalloc"]
simd = []
large-datasets = ["streaming", "pagination"]
streaming = []
pagination = []

[[bin]]
name = "risk-analytics-api"
path = "src/main.rs"

[[bin]]
name = "test_mock_data"
path = "test_mock_data.rs"

